--- a/src/components/Works.css
+++ b/src/components/Works.css
@@ -49,7 +49,7 @@
 .works__wrapper {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     margin: 0 auto;
 }
   
