--- a/src/components/Auction.css
+++ b/src/components/Auction.css
@@ -1,15 +1,19 @@
+/* This is for Collections ----- Popular NFTs */
+
+
+
 .auction__section {
     padding: 100px 0 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: #000;
+    background: #000000;
     color: #fff;
   }
   
 .auction__container-card {
-    background: linear-gradient(45deg, #8A2BE2 0%, #8A2BE2 100%);
-    box-shadow: 0 6px 20px rgba(140, 0, 255, 0.3);
+    background: linear-gradient(45deg, #ffd503d7 0%, #ffd503d7 100%);
+    box-shadow: 0 6px 20px rgba(255, 233, 106, 0.3);
     width: 220px;
     height: 300px;
     text-decoration: none;
@@ -18,18 +22,18 @@
   
 .auction__container-card:nth-child(2) {
     transform: scale(1.05);
-    background: #242424;
+    background: #5f5f5f;
 }
 
 .auction__container-card:nth-child(4) {
     transform: scale(1.05);
-    background: #242424;
+    background: #5f5f5f;
 }
   
 .auction__container-card:hover {
     transform: scale(1.06);
     transition: all 0.3s ease-out;
-    color: #8A2BE2;
+    color: #ffd500;
 }
   
 .auction__container-card:nth-child(2) {
@@ -54,7 +58,7 @@
 }
   
 .auction__heading {
-    color: #8A2BE2;
+    color: #ffd500;
     margin-bottom: 12px;
 }
 
@@ -69,7 +73,7 @@
     height: 500px;
     padding: 24px;
     align-items: center;
-    color: #fff;
+    color: #000;
 }
   
 .auction__container-cardInfo h3 {
