--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,5 +1,6 @@
 .home__hero {
     color: #fff;
+    background-color: #000;
     padding: 160px 0;
 }
 
@@ -32,7 +33,7 @@
 }
   
 .top-line {
-    color: #8A2BE2;
+    color: #ffdc36;
     font-size: 20px;
     line-height: 16px;
     font-weight: 700;
@@ -62,7 +63,7 @@
     margin-bottom: 35px;
     font-size: 20px;
     line-height: 24px;
-    color: #8A2BE2;
+    color: #ffdc36;
 }
   
 .home__hero-img-wrapper {
