--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -8,8 +8,8 @@
   }
   
 .Team__container-card {
-    background: linear-gradient(45deg, #8A2BE2 0%, #8A2BE2 100%);
-    box-shadow: 0 6px 20px rgba(140, 0, 255, 0.3);
+    background: linear-gradient(45deg, #ffd503d7 0%, #ffd503d7 100%);
+    box-shadow: 0 6px 20px rgba(255, 233, 106, 0.3);
     width: 220px;
     height: 250px;
     text-decoration: none;
@@ -18,18 +18,18 @@
   
 .Team__container-card:nth-child(2) {
     transform: scale(1.05);
-    background: #242424;
+    background: #5f5f5f;
 }
 
 .Team__container-card:nth-child(4) {
     transform: scale(1.05);
-    background: #242424;
+    background: #5f5f5f;
 }
   
 .Team__container-card:hover {
     transform: scale(1.07);
     transition: all 0.3s ease-out;
-    color: #8A2BE2;
+    color: #ffd500;
 }
   
 .Team__container-card:nth-child(2) {
@@ -54,7 +54,7 @@
 }
   
 .Team__heading {
-    color: #8A2BE2;
+    color: #ffdc36;
     margin-bottom: 12px;
 }
 
@@ -69,7 +69,7 @@
     height: 500px;
     padding: 24px;
     align-items: center;
-    color: #fff;
+    color: #000;
 }
   
 .Team__container-cardInfo h3 {
